[tool.poetry]
name = "gp-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gp_db"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
toolz = "^0.12.0"
sqlalchemy = "^2.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
